ifds/src/tests/verification/snapshots/ifds__tests__verification___naive_global_get_and_set_multiple_functions_dot.snap
---
source: src/tests/verification/mod.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (54) at (3, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (55) at (3, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (56) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (57) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (58) at (3, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (59) at (3, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (60) at (2, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (61) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (62) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (63) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (64) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (65) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (66) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (67) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (68) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (69) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (70) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (71) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (72) at (0, 3) { };
\node[font=\tiny] at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] at (-1.5, 1.5) {Const(-2, 1.0)};
\node[font=\tiny] at (-1.5, 2.5) {Return([0])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (35) at (8, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (36) at (8, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (37) at (8, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (38) at (8, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (39) at (8, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (40) at (8, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (41) at (7, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (42) at (7, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (43) at (7, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (44) at (7, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (45) at (7, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (46) at (7, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (47) at (6, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (48) at (6, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (49) at (6, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (50) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (51) at (5, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (52) at (5, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (53) at (5, 3) { };
\node[font=\tiny] at (3.5, 0.5) {Assign(0, -2)};
\node[font=\tiny] at (3.5, 1.5) {Const(-1, 1.0)};
\node[font=\tiny] at (3.5, 2.5) {Return([0])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (0) at (15, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (1) at (15, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (2) at (15, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (3) at (15, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (4) at (15, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (5) at (15, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (6) at (14, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (7) at (14, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (8) at (14, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (9) at (14, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (10) at (14, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (11) at (14, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (12) at (13, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (13) at (13, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (14) at (13, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (15) at (13, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (16) at (13, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (17) at (13, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (18) at (12, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (19) at (12, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (20) at (12, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (21) at (12, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (22) at (12, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (23) at (11, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (24) at (11, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (25) at (11, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (26) at (11, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (27) at (11, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (28) at (11, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (29) at (10, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (30) at (10, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (31) at (10, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (32) at (10, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (33) at (10, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (34) at (10, 5) { };
\node[font=\tiny] at (8.5, 0.5) {Assign(1, -1)};
\node[font=\tiny] at (8.5, 1.5) {Assign(-2, 1)};
\node[font=\tiny] at (8.5, 2.5) {Const(2, 1.0)};
\node[font=\tiny] at (8.5, 3.5) {Call(1, [2], [0])};
\node[font=\tiny] at (8.5, 4.5) {Call(2, [], [1])};
		\path[->] (0) edge (1);
		\path[->] (0) edge (18);
		\path[->] (35) edge (36);
		\path[->] (54) edge (55);
		\path[->] (1) edge (2);
		\path[->] (55) edge (57);
		\path[->] (37) edge (39);
		\path[->] (56) edge (58);
		\path[->] (2) edge (3);
		\path[->] (38) edge (40);
		\path[->] (57) edge (59);
		\path[->] (6) edge (7);
		\path[->] (41) edge (42);
		\path[->] (41) edge (47);
		\path[->] (60) edge (61);
		\path[->] (42) edge (44);
		\path[->] (43) edge (45);
		\path[->] (62) edge (64);
		\path[->] (8) edge (9);
		\path[->] (44) edge (46);
		\path[->] (63) edge (65);
		\path[->] (12) edge (13);
		\path[->] (13) edge (14);
		\path[->] (47) edge (48);
		\path[->] (66) edge (67);
		\path[->] (14) edge (15);
		\path[->] (48) edge (49);
		\path[->] (67) edge (68);
		\path[->] (16) edge (17);
		\path[->] (18) edge (8);
		\path[->] (18) edge (19);
		\path[->] (19) edge (20);
		\path[->] (20) edge (21);
		\path[->] (23) edge (24);
		\path[->] (24) edge (25);
		\path[->] (26) edge (27);
		\path[->] (27) edge (28);
		\path[->] (29) edge (30);
		\path[->] (50) edge (51);
		\path[->] (69) edge (66);
		\path[->] (69) edge (70);
		\path[->] (30) edge (31);
		\path[->] (51) edge (38);
		\path[->] (51) edge (52);
		\path[->] (70) edge (63);
		\path[->] (70) edge (71);
		\path[->] (31) edge (26);
		\path[->] (31) edge (32);
		\path[->] (52) edge (53);
		\path[->] (71) edge (72);
		\path[->] (32) edge (33);
		\path[->] (33) edge (34);
		\path[->, green] (3) [bend left] edge node { } (35);
		\path[->, green] (4) [bend left] edge node { } (54);
		\path[->, green] (9) [bend left] edge node { } (41);
		\path[->, green] (10) [bend left] edge node { } (60);
		\path[->, green] (32) [bend left] edge node { } (50);
		\path[->, green] (33) [bend left] edge node { } (69);
		\path[->, red] (37) [bend right] edge  node { } (4);
		\path[->, red] (56) [bend right] edge  node { } (5);
		\path[->, red] (38) [bend right] edge  node { } (4);
		\path[->, red] (57) [bend right] edge  node { } (5);
		\path[->, red] (43) [bend right] edge  node { } (10);
		\path[->, red] (62) [bend right] edge  node { } (11);
		\path[->, red] (44) [bend right] edge  node { } (10);
		\path[->, red] (63) [bend right] edge  node { } (11);
		\path[->, red] (48) [bend right] edge  node { } (16);
		\path[->, red] (67) [bend right] edge  node { } (22);
		\path[->, red] (52) [bend right] edge  node { } (33);
		\path[->, red] (71) [bend right] edge  node { } (34);


                \end{tikzpicture}
            \end{document}
