ifds/src/tests/verification/snapshots/ifds__tests__verification___naive_memory_load_different_functions2_dot.snap
---
source: src/tests/verification/mod.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (90) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (91) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (92) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (93) at (4, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (94) at (3, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (95) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (96) at (3, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (97) at (2, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (98) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (99) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (100) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@1$}] (101) at (1, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@1$}] (102) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@1$}] (103) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@1$}] (104) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (105) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (106) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (107) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (108) at (0, 3) { };
\node[font=\tiny] at (-1.5, 0.5) {Const(1, 8.0)};
\node[font=\tiny] at (-1.5, 1.5) {Load(0, 0.0, 1)};
\node[font=\tiny] at (-1.5, 2.5) {Return([0])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (0) at (14, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (1) at (14, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (2) at (14, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (3) at (14, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (4) at (14, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (5) at (14, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (6) at (14, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (7) at (14, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (8) at (14, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (9) at (13, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (10) at (13, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (11) at (13, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (12) at (13, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (13) at (13, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (14) at (13, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (15) at (13, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (16) at (13, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (17) at (13, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (18) at (12, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (19) at (12, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (20) at (12, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (21) at (12, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (22) at (12, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (23) at (12, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (24) at (12, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (25) at (12, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (26) at (12, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (27) at (11, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (28) at (11, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (29) at (11, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (30) at (11, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (31) at (11, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (32) at (11, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (33) at (11, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (34) at (11, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (35) at (11, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%4$}] (36) at (10, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%4$}] (37) at (10, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%4$}] (38) at (10, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%4$}] (39) at (10, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%4$}] (40) at (10, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%4$}] (41) at (10, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%4$}] (42) at (10, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%4$}] (43) at (10, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%4$}] (44) at (10, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%5$}] (45) at (9, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%5$}] (46) at (9, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%5$}] (47) at (9, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%5$}] (48) at (9, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%5$}] (49) at (9, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%5$}] (50) at (9, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%5$}] (51) at (9, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%5$}] (52) at (9, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%5$}] (53) at (9, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%6$}] (54) at (8, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%6$}] (55) at (8, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%6$}] (56) at (8, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%6$}] (57) at (8, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%6$}] (58) at (8, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%6$}] (59) at (8, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%6$}] (60) at (8, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%6$}] (61) at (8, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%6$}] (62) at (8, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%7$}] (63) at (7, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%7$}] (64) at (7, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%7$}] (65) at (7, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%7$}] (66) at (7, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%7$}] (67) at (7, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%7$}] (68) at (7, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%7$}] (69) at (7, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%7$}] (70) at (7, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%7$}] (71) at (7, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (72) at (6, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (73) at (6, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (74) at (6, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (75) at (6, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@0$}] (76) at (6, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@1$}] (77) at (5, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@1$}] (78) at (5, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@1$}] (79) at (5, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $@1$}] (80) at (5, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (81) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (82) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (83) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (84) at (4, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (85) at (4, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (86) at (4, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (87) at (4, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (88) at (4, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (89) at (4, 8) { };
\node[font=\tiny] at (2.5, 0.5) {Block(0)};
\node[font=\tiny] at (2.5, 1.5) {Const(0, 8.0)};
\node[font=\tiny] at (2.5, 2.5) {Const(1, -12345.0)};
\node[font=\tiny] at (2.5, 3.5) {Store(1, 0.0, 0)};
\node[font=\tiny] at (2.5, 4.5) {Call(1, [], [2])};
\node[font=\tiny] at (2.5, 5.5) {Store(1, 1.0, 0)};
\node[font=\tiny] at (2.5, 6.5) {Call(1, [], [3])};
\node[font=\tiny] at (2.5, 7.5) {Return([])};
		\path[->] (0) edge (1);
		\path[->] (90) edge (91);
		\path[->] (91) edge (92);
		\path[->] (2) edge (3);
		\path[->] (92) edge (93);
		\path[->] (3) edge (4);
		\path[->] (3) edge (72);
		\path[->] (4) edge (5);
		\path[->] (5) edge (6);
		\path[->] (5) edge (78);
		\path[->] (6) edge (7);
		\path[->] (7) edge (8);
		\path[->] (9) edge (10);
		\path[->] (10) edge (11);
		\path[->] (94) edge (92);
		\path[->] (94) edge (95);
		\path[->] (95) edge (96);
		\path[->] (12) edge (13);
		\path[->] (12) edge (72);
		\path[->] (13) edge (14);
		\path[->] (14) edge (15);
		\path[->] (14) edge (78);
		\path[->] (15) edge (16);
		\path[->] (16) edge (17);
		\path[->] (18) edge (19);
		\path[->] (19) edge (20);
		\path[->] (20) edge (21);
		\path[->] (21) edge (22);
		\path[->] (23) edge (24);
		\path[->] (24) edge (25);
		\path[->] (25) edge (26);
		\path[->] (27) edge (28);
		\path[->] (28) edge (29);
		\path[->] (29) edge (30);
		\path[->] (30) edge (31);
		\path[->] (31) edge (32);
		\path[->] (32) edge (33);
		\path[->] (34) edge (35);
		\path[->] (36) edge (37);
		\path[->] (37) edge (38);
		\path[->] (38) edge (39);
		\path[->] (39) edge (40);
		\path[->] (40) edge (41);
		\path[->] (41) edge (42);
		\path[->] (42) edge (43);
		\path[->] (43) edge (44);
		\path[->] (45) edge (46);
		\path[->] (46) edge (47);
		\path[->] (47) edge (48);
		\path[->] (48) edge (49);
		\path[->] (49) edge (50);
		\path[->] (50) edge (51);
		\path[->] (51) edge (52);
		\path[->] (52) edge (53);
		\path[->] (54) edge (55);
		\path[->] (55) edge (56);
		\path[->] (56) edge (57);
		\path[->] (57) edge (58);
		\path[->] (58) edge (59);
		\path[->] (59) edge (60);
		\path[->] (60) edge (61);
		\path[->] (61) edge (62);
		\path[->] (63) edge (64);
		\path[->] (64) edge (65);
		\path[->] (65) edge (66);
		\path[->] (66) edge (67);
		\path[->] (67) edge (68);
		\path[->] (68) edge (69);
		\path[->] (69) edge (70);
		\path[->] (70) edge (71);
		\path[->] (97) edge (98);
		\path[->] (98) edge (92);
		\path[->] (98) edge (99);
		\path[->] (99) edge (100);
		\path[->] (73) edge (74);
		\path[->] (75) edge (76);
		\path[->] (101) edge (102);
		\path[->] (102) edge (103);
		\path[->] (103) edge (104);
		\path[->] (79) edge (80);
		\path[->] (81) edge (82);
		\path[->] (105) edge (94);
		\path[->] (105) edge (106);
		\path[->] (82) edge (2);
		\path[->] (82) edge (83);
		\path[->] (106) edge (107);
		\path[->] (83) edge (12);
		\path[->] (83) edge (84);
		\path[->] (107) edge (108);
		\path[->] (84) edge (85);
		\path[->] (85) edge (86);
		\path[->] (86) edge (87);
		\path[->] (87) edge (88);
		\path[->] (88) edge (89);
		\path[->, green] (72) [bend left] edge node { } (97);
		\path[->, green] (74) [bend left] edge node { } (97);
		\path[->, green] (78) [bend left] edge node { } (101);
		\path[->, green] (85) [bend left] edge node { } (105);
		\path[->, green] (87) [bend left] edge node { } (105);
		\path[->, red] (92) [bend right] edge  node { } (23);
		\path[->, red] (92) [bend right] edge  node { } (34);
		\path[->, red] (99) [bend right] edge  node { } (73);
		\path[->, red] (99) [bend right] edge  node { } (75);
		\path[->, red] (103) [bend right] edge  node { } (77);
		\path[->, red] (103) [bend right] edge  node { } (79);
		\path[->, red] (107) [bend right] edge  node { } (86);
		\path[->, red] (107) [bend right] edge  node { } (88);


                \end{tikzpicture}
            \end{document}
