ifds/src/tests/verification/snapshots/ifds__tests__verification___naive_nested_call_dot.snap
---
source: src/tests/verification/mod.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (14) at (3, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (15) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (16) at (2, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (17) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (18) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (19) at (1, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (20) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (21) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (22) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (23) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (24) at (0, 2) { };
\node[font=\tiny] at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] at (-1.5, 1.5) {Call(mytest, [0], [1])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (8) at (7, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (9) at (7, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (10) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (11) at (6, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (12) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (13) at (5, 1) { };
\node[font=\tiny] at (3.5, 0.5) {Return([0])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (0) at (11, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (1) at (11, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (2) at (11, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (3) at (10, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (4) at (10, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (5) at (9, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (6) at (9, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (7) at (9, 2) { };
\node[font=\tiny] at (7.5, 0.5) {Call(mytesttwo, [0], [1])};
\node[font=\tiny] at (7.5, 1.5) {Return([1])};
		\path[->] (0) edge (1);
		\path[->] (8) edge (9);
		\path[->] (1) edge (2);
		\path[->] (14) edge (15);
		\path[->] (10) edge (11);
		\path[->] (16) edge (17);
		\path[->] (3) edge (4);
		\path[->] (19) edge (20);
		\path[->] (20) edge (21);
		\path[->] (5) edge (6);
		\path[->] (12) edge (13);
		\path[->] (22) edge (14);
		\path[->] (22) edge (23);
		\path[->] (6) edge (7);
		\path[->] (23) edge (24);
		\path[->, green] (0) [bend left] edge node { } (8);
		\path[->, green] (14) [bend left] edge node { } (0);
		\path[->, green] (5) [bend left] edge node { } (12);
		\path[->, green] (23) [bend left] edge node { } (5);
		\path[->, red] (8) [bend right] edge  node { } (3);
		\path[->, red] (3) [bend right] edge  node { } (18);
		\path[->, red] (12) [bend right] edge  node { } (6);
		\path[->, red] (6) [bend right] edge  node { } (24);


                \end{tikzpicture}
            \end{document}
