ifds/src/tests/verification/snapshots/ifds__tests__verification___naive_nested_call_global_circuit_breaker_dot.snap
---
source: src/tests/verification/mod.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (29) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (30) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (31) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (32) at (4, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (33) at (3, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (34) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (35) at (3, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (36) at (2, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (37) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (38) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (39) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (40) at (1, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (41) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (42) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (43) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (44) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (45) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (46) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (47) at (0, 3) { };
\node[font=\tiny] at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] at (-1.5, 1.5) {Assign(-1, 0)};
\node[font=\tiny] at (-1.5, 2.5) {Call(mytest, [0], [1])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (11) at (9, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (12) at (9, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (13) at (9, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (14) at (9, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (15) at (9, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (16) at (9, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (17) at (8, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (18) at (8, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (19) at (8, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (20) at (8, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (21) at (7, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (22) at (7, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (23) at (7, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (24) at (7, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (25) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (26) at (6, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (27) at (6, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (28) at (6, 3) { };
\node[font=\tiny] at (4.5, 0.5) {Const(-1, 1.0)};
\node[font=\tiny] at (4.5, 1.5) {Assign(0, -1)};
\node[font=\tiny] at (4.5, 2.5) {Return([0])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (0) at (14, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (1) at (14, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (2) at (14, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (3) at (13, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (4) at (13, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (5) at (13, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (6) at (12, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (7) at (12, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (8) at (11, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (9) at (11, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (10) at (11, 2) { };
\node[font=\tiny] at (9.5, 0.5) {Call(mytesttwo, [0], [1])};
\node[font=\tiny] at (9.5, 1.5) {Return([1])};
		\path[->] (29) edge (30);
		\path[->] (1) edge (2);
		\path[->] (12) edge (14);
		\path[->] (12) edge (19);
		\path[->] (13) edge (15);
		\path[->] (14) edge (16);
		\path[->] (3) edge (4);
		\path[->] (17) edge (18);
		\path[->] (4) edge (5);
		\path[->] (33) edge (31);
		\path[->] (33) edge (34);
		\path[->] (19) edge (20);
		\path[->] (34) edge (35);
		\path[->] (21) edge (22);
		\path[->] (36) edge (37);
		\path[->] (6) edge (7);
		\path[->] (22) edge (23);
		\path[->] (37) edge (38);
		\path[->] (23) edge (24);
		\path[->] (40) edge (41);
		\path[->] (41) edge (42);
		\path[->] (42) edge (43);
		\path[->] (8) edge (9);
		\path[->] (25) edge (12);
		\path[->] (25) edge (26);
		\path[->] (44) edge (33);
		\path[->] (44) edge (45);
		\path[->] (9) edge (10);
		\path[->] (26) edge (27);
		\path[->] (45) edge (46);
		\path[->] (27) edge (28);
		\path[->] (46) edge (47);
		\path[->, green] (0) [bend left] edge node { } (11);
		\path[->, green] (31) [bend left] edge node { } (0);
		\path[->, green] (3) [bend left] edge node { } (11);
		\path[->, green] (34) [bend left] edge node { } (0);
		\path[->, green] (8) [bend left] edge node { } (25);
		\path[->, green] (46) [bend left] edge node { } (8);
		\path[->, red] (1) [bend right] edge  node { } (32);
		\path[->, red] (13) [bend right] edge  node { } (1);
		\path[->, red] (14) [bend right] edge  node { } (1);
		\path[->, red] (19) [bend right] edge  node { } (6);
		\path[->, red] (6) [bend right] edge  node { } (39);
		\path[->, red] (9) [bend right] edge  node { } (47);
		\path[->, red] (27) [bend right] edge  node { } (9);


                \end{tikzpicture}
            \end{document}
